--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 html {
     font-family: Myriad Pro;
     -ms-text-size-adjust: 100%; 
-    -webkit-text-size-adjust: 100%; 
+    -webkit-text-size-adjust: 100%;
+    background: #fff;
 }
 
 body {
